# libodiosacd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
data/: CMakeLists.txt  libodiosacd.pc.in
debian/: changelog  control  copyright  rules  watch
doc/: constants.py  decimation-analysis.ipynb  dsd2pcm-filters.ipynb
src/: CMakeLists.txt  libodiosacd.c  libodiosacd.h
src/converter/: converter.c  converter.h  converterbase.c  converterbase.h  dsdfilter.c  dsdfilter.h  filtersetup.c  filtersetup.h  memory.h  pcmfilter.c  pcmfilter.h
src/decoder/: acdata.c  acdata.h  codedtable.c  codedtable.h  decoder.c  decoder.h  decoderbase.c  decoderbase.h  framereader.c  framereader.h  strdata.c  strdata.h
src/reader/: dff.c  dff.h  disc.c  disc.h  dsf.c  dsf.h  media.c  media.h  sacd.h
